--- a/src/main/resources/templates/common/master.html
+++ b/src/main/resources/templates/common/master.html
@@ -120,7 +120,8 @@
                                         <ul class="dropdown-menu">
                                             <li><a th:href="@{/signup}">Sign Up</a></li>
                                             <li><a th:href="@{/login}">LogIn</a></li>
-                                            <li><a th:href="@{/companyAccount}">MyAccount</a></li>
+                                            <li><a th:href="@{/companyAccount}">My Account</a></li>
+                                            <li><a th:href="@{/payment}">My Payment</a></li>
                                         </ul>
                                     </li>
 								</ul>
