--- a/src/main/resources/templates/company_payment.html
+++ b/src/main/resources/templates/company_payment.html
@@ -17,9 +17,9 @@
             </div>
             <div class="vertical-space-60"></div>
             <div class="job-post-box">
-                <form th:action="" method="post" enctype="multipart/form-data">
+                <form th:action="@{/}" method="post" enctype="multipart/form-data">
                     <div class="form-group">
-                        <label for="examplePaymentType">Payment Type</label>
+                        <label for="examplePaymentType" class="form-group">Payment Type</label>
                         <input type="text" class="form-control" id="exampleInputPaymentType" placeholder="Full name PaymentType"
                         th:value="${payment.paymentType}" name="paymentType" required />
                     </div>
@@ -27,14 +27,14 @@
                     <div class="row">
                         <div class="col-lg-6 col-md-6">
                             <div class="form-group">
-                                <label for="exampleCardName">Card Name</label>
+                                <label for="exampleCardName" class="form-group">Card Name</label>
                                 <input type="text" class="form-control" id="exampleInputCardName" 
                                 placeholder="Payment cardName" th:value="${payment.cardName}" name="cardName" required />
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-6">
                             <div class="form-group">
-                                <label for="exampleCardNumber">Card Number</label>
+                                <label for="exampleCardNumber" class="form-group">Card Number</label>
                                 <input type="text" class="form-control" id="exampleInputCardNumber"
                                 placeholder="Payment Card Number" th:value="${payment.cardNumber}" name="cardNumber" required />
                             </div>
@@ -44,7 +44,7 @@
                     <div class="row">
                         <div class="col-lg-6 col-md-6">
                             <div class="form-group">
-                                <label for="exampleCVC">CVC</label>
+                                <label for="exampleCVC" class="form-group">CVC</label>
                                 <input type="int" class="form-control" id="exampleInputCVC"
                                 placeholder="CVC" th:value="${payment.cvc}" 
                                 name="cvc" required />
@@ -52,7 +52,7 @@
                         </div>
                         <div class="col-lg-6 col-md-6">
                             <div class="form-group">
-                                <label for="exampleHolderName">Holder Name</label>
+                                <label for="exampleHolderName" class="form-group">Holder Name</label>
                                 <input type="text" class="form-control" id="exampleInputHolderName"
                                 placeholder="Expiry Year"
                                 th:value="${payment.holderName}" name="holderName"  />
@@ -63,7 +63,7 @@
                     <div class="row">
                         <div class="col-lg-6 col-md-6">
                             <div class="form-group">
-                                <label for="exampleExpiryMonth">ExpiryMonth</label>
+                                <label for="exampleExpiryMonth" class="form-group">ExpiryMonth</label>
                                 <input type="int" class="form-control" id="exampleInputPhone"
                                 placeholder="Expiry Month" th:value="${payment.expiryMonth}" 
                                 name="expiryMonth" required />
@@ -71,7 +71,7 @@
                         </div>
                         <div class="col-lg-6 col-md-6">
                             <div class="form-group">
-                                <label for="exampleExpiryYear">Expiry Year</label>
+                                <label for="exampleExpiryYear"class="form-group">Expiry Year</label>
                                 <input type="text" class="form-control" id="exampleInputWebsite"
                                 placeholder="Expiry Year"
                                 th:value="${payment.expiryYear}" name="expiryYear"  />
@@ -79,7 +79,7 @@
                         </div>
                     </div>
                     
-                    <button type="submit" class="btn Post-Job-Offer">Upload Payment Information</button>
+                    <button type="submit" class="btn btn-primary Post-Job-Offer">Upload Payment Information</button>
                 </form>
             </div>
         </div>
